Remove lovable-tagger dependency and references

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta property="og:title" content="Bloom House - Доставка цветов с любовью" />
     <meta property="og:description" content="Bloom House дарит радость и эмоции с каждым букетом. Заказывайте цветы онлайн с доставкой." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@bloomhouse" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
